# Bank-Customer-Churn-Predication

./: README.md  main.py  model.h5  model_training.ipynb  processed_data_card.pkl  pyproject.toml  requirements.txt  scaler.pkl
